<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/NowPlayingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    android:text="@string/now_playing"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:drawablePadding="3dp"
                    android:text="@string/see_more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNowPlayingMovie"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/UpcomingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/NowPlayingLayout"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    android:text="@string/upcoming_movies"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:drawablePadding="3dp"
                    android:text="@string/see_more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PopularLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/UpcomingLayout"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    android:text="@string/popular_movies"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:drawablePadding="3dp"
                    android:text="@string/see_more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TopRatedLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/PopularLayout"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="8dp"
                    android:text="@string/top_rated_movies"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:drawablePadding="3dp"
                    android:text="@string/see_more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>